Add save configuration option and possibility to move between itens using the keyboard